	- [roms]  $954: fixed size for archived handles on PedRom
	- [roms]  $958: fixed file pattern for Win32 file selector; fixed default 
		path and patter for the new GTK file selector.
	- [roms]  $960: improved management of ALPHA key on TI89 (letter/number).
	- [roms]  $962: factorized TI89/V200 & TI92+ code (memory).
	- [kevin] $966: added KDE file selector support.

- 25/02/2005, version 1.80o: roms
	- fixed bug in ti68k_get_hw_param_block (wrong search/replace)
	- fixed TAB char (0x09) pb in the dbg_mem window (Lionel)
	- handles are now displayed fine with PedRom
	- program entry breakpoint feature now useable with AMS >= 2.00
	- improved dbg windows behaviour: save/restore size, position and 
	state (hide/minimized);	fixed ini file, too
	- updated manpage
	- command line improved and up-to-date
	- cleaned-up configure.ac script (CygWin & MinGW)
	- fixed Step Over
	- added Win32 file selector
	- fixed dependancy problem with tiemu&uae rule in src/Makefile.in
	- fixed bad use of sizeof in hw_io_init
	- fixed MinGW path with Kevin
	- fixed -mms-bitfields issue with UAE Makefile under MinGW (Kevin)
	- fixed out-of-range access with io_bit_tst in ports.c (Kevin)
	- fixed contrast on TI92+
	
- 18/02/2005, version 1.80n: roms
	- fixed FLASH writes with HW3 patch
	- fixed Step Over on the following FLINEs : 0xfff0, 0xfff2, 0xffee.
	- fixed Hardware Parameter Block when converting FLASH upgrade
	- the Windows(tm) MENU key raises the popup menu for now
	- fixed disassemblling of 0xffee and 0xffef FLINEs
	- changed engine_start/stop architecture to remove some menu locks/bugs
	- fix: ROM call combo box: does not jump to call when names contains '/'
	- fix: don't reload ROM calls when changing AMS without chaning calc type
	- show vector name rather than number
	- dis-assemble FLINE with __ld_entry_point
	- dis-assemble FLINE with _bcd_math followed by FPU pseudo-opcode
	- clean-up and improvements in the misc menu (help)
	- fixed status bar display in the bkpts dbox