@@ -355,54 +355,55 @@ void io2_put_byte(uint32_t addr, uint8_t arg)
 			if(tihw.protect)
 				return;
 			for(i = 0; i < 8; i++)	// this is the fastest method (an easier method will use 64 bit integer)
-				tihw.ram_exec[i] = arg & (1 << i);
+				tihw.ram_exec[8+i] = arg & (1 << i);
 		case 0x01:	// rw <76543210>
 		case 0x09:
 			if(tihw.protect)
 				return;
 			for(i = 0; i < 8; i++)
-				tihw.ram_exec[8+i] = arg & (1 << i);
+				tihw.ram_exec[0+i] = arg & (1 << i);
 		case 0x02:	// rw <76543210>
 		case 0x0a:
 			if(tihw.protect)
 				return;
 			for(i = 0; i < 8; i++)
-				tihw.ram_exec[16+i] = arg & (1 << i);
+				tihw.ram_exec[24+i] = arg & (1 << i);
 		case 0x03:	// rw <76543210>
 		case 0x0b:
 			if(tihw.protect)
 				return;
 			for(i = 0; i < 8; i++)
-				tihw.ram_exec[24+i] = arg & (1 << i);
+				tihw.ram_exec[16+i] = arg & (1 << i);
 		case 0x04:	// rw <76543210>
 		case 0x0c:
 			if(tihw.protect)
 				return;
 			for(i = 0; i < 8; i++)
-				tihw.ram_exec[32+i] = arg & (1 << i);
+				tihw.ram_exec[40+i] = arg & (1 << i);
 		case 0x05:	// rw <76543210>
 		case 0x0d:
 			if(tihw.protect)
 				return;
 			for(i = 0; i < 8; i++)
-				tihw.ram_exec[40+i] = arg & (1 << i);
+				tihw.ram_exec[32+i] = arg & (1 << i);
 		case 0x06:	// rw <76543210>
 		case 0x0e:
 			if(tihw.protect)
 				return;
 			for(i = 0; i < 8; i++)
-				tihw.ram_exec[48+i] = arg & (1 << i);
+				tihw.ram_exec[56+i] = arg & (1 << i);
 		case 0x07:	// rw <76543210>
 		case 0x0f:
 			if(tihw.protect)
 				return;
 			for(i = 0; i < 8; i++)
-				tihw.ram_exec[56+i] = arg & (1 << i);
+				tihw.ram_exec[48+i] = arg & (1 << i);
 		case 0x11:	// -w <76543210>
 			break;
 		case 0x12:	// rw <..543210>
 			if(tihw.protect)
 				return;
+			//printf("<%02x>\n", arg);
 			break;
 		case 0x13:
 			break;
